--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -360,5 +360,12 @@ Its sometimes reported that the database file TVSeriesDatabase4.db3 has become d
    {{{episode<;><Episode.FirstAired>;<=;<today><cond><Episode.FirstAired>;>=;<today-30><cond><Episode.Watched>;=;0<;><Episode.FirstAired>;desc<;>}}}
    * Recently Added UnWatched 
    {{{episode<;><Episode.FileDateCreated>;>=;<today-7><cond><Episode.Watched>;=;0<;><Episode.FileDateCreated>;desc<;>}}}
-   
+
+ ==Speed Up Import Time By Ignoring Old Series==
+   If you have a large collection and notice it takes a while for the import process to run, you could tell MP-TVSeries to ignore some of your collection. You should only do this on old shows that are well and truley finished and are unlikely to be edited/changed at the tvdb.com
+   * Load MP-TVSeries plugin Configuration
+   * Click on the 'Details' Tab
+   * Right Click an Old Series
+   * Select 'Ignore on Scan'
+
 ----
