--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -104,6 +104,11 @@ If you have a series which has been rebooted, lets take Battlestar Galatica for 
 If a series was already imported incorrectly in Mediaportal, highlight the series, press F9 or Info on remote, then press 'Force new online lookup for series'.
 This will prompt you to select a series or manually enter a search term.
 
+ ==Mini-Series==
+A standalone Mini Series, like Dune, will usually have the part 1, part 2 etc listed at Season 1, Episode 1, Episode 2 on thetvdb. If for example, the Mini Series lead to a TV Show, such as BattleStar Galactica (2003) that Mini Series maybe be listed in Specials / Season 0. 
+
+The Solution is to check the Mini-Series on [http://thetvdb.com thetvdb.com], match your files names to their syntax.
+
  ==Single File - Double Episode==
 MP-TVSeries can support 2 episodes in a single file. More than 2 is not currently supported
 
