--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -105,9 +105,15 @@ If a series was already imported incorrectly in Mediaportal, highlight the serie
 This will prompt you to select a series or manually enter a search term.
 
  ==Mini-Series==
-A standalone Mini Series, like Dune, will usually have the part 1, part 2 etc listed at Season 1, Episode 1, Episode 2 on thetvdb. If for example, the Mini Series lead to a TV Show, such as BattleStar Galactica (2003) that Mini Series maybe be listed in Specials / Season 0. 
+A standalone Mini Series, like Dune, will usually have the part 1, part 2 etc listed at Season 1, Episode 1, Episode 2 etc on thetvdb. If for example, the Mini Series lead to a TV Show, such as BattleStar Galactica (2003) that Mini Series maybe be listed in Specials / Season 0. 
 
-The Solution is to check the Mini-Series on [http://thetvdb.com thetvdb.com], match your files names to their syntax.
+The Solution is to check the Mini-Series on [http://thetvdb.com thetvdb.com], match your files names to their syntax. Examples:
+
+ * Frank Herbert's Dune - S01E01.avi
+ * Frank Herbert's Dune - S01E02.avi
+ * Frank Herbert's Dune - S01E03.avi
+ * Battlestar Galactica (2003) - S0*0*E01 - MiniSeries(1).avi
+ * Battlestar Galactica (2003) - S0*0*E02 - MiniSeries(2).avi
 
  ==Single File - Double Episode==
 MP-TVSeries can support 2 episodes in a single file. More than 2 is not currently supported
