--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -80,7 +80,7 @@ You can use either or both of the sites at the same time.
 =File Naming Conventions=
 MP-TVSeries supports various naming conventions, if you want a perfect match without any user interaction, its best to name the Series as it is shown on thetvdb.com. If the Show contains a : such as CSI: Miami you could use CSI Miami or CSI- Miami
 
- ==Examples of Supported Filenames==
+ ==Examples Of Supported Filenames==
 Here are a few random examples which will parse.
  * Alias.S01E01.avi
  * Alias - S01E01 - Pilot.avi
@@ -93,7 +93,7 @@ Specials need to be labeled as Season 0, Lets take Top Gear Polar Special for ex
  * Top Gear - S00E49 - Polar Special.avi
  * Top Gear - 0x49.mkv
  
- ==Original Series and Remakes==
+ ==Original Series And Remakes==
 If you have a series which has been rebooted, lets take Battlestar Galatica for example, there is the Original, a 1980's version and a 2003 version, How do you name these? go to [http://www.thetvdb.com thetvdb.com], search Battlestar Galatica. We need to name our files the same way. note each series has a different show id comfirming they are all different series
  http://mptvseries.googlecode.com/svn/wiki/Images/TvdbBSGExample.jpg
 
@@ -194,7 +194,7 @@ To download all the available information for your Series, including Episodes yo
 ----
 
 =Subtitle Support=
-Newer versions of MP-TVSeries will now be using the [http://forum.team-mediaportal.com/showthread.php?t=85545&referrerid=104898 SubCentral] Plugin, while support for Subtitle Downloader will be retired.
+Newer versions of MP-TVSeries will now be supporting the [http://forum.team-mediaportal.com/showthread.php?t=85545&referrerid=104898 SubCentral] Plugin, 'Subtitle Downloader' will be retired.
 
  ==Installation==
  * [http://www.team-mediaportal.com/extensions/movies-videos/subcentral Download] the SubCentral Plugin
@@ -292,10 +292,10 @@ MP-TVSeries supports multiple languages, and you are welcome to contribute by up
  * Drop down the Language box, choose your language
  * Close MediaPortal
 
- ==Update a Language==
+ ==Update Language==
  If you find a language has incorrect spelling, or missing some translation fields, you can update the appropriate .xml file in the [http://code.google.com/p/mptvseries/wiki/FAQ#Language.XML_(Files) Language Folder]. Please submit the updated file on the [http://forum.team-mediaportal.com/my-tvseries-162/ forum]
 
- ==Add a new Language==
+ ==Add New Language==
  * Download the latest English XML [http://mptvseries.googlecode.com/svn/trunk/MP-TVSeries/Resources/Languages/en(us).xml here]
  * Rename en(us).xml to yourlanguage.xml
  * Update All Fields Possible
@@ -343,7 +343,7 @@ Its sometimes reported that the database file TVSeriesDatabase4.db3 has become d
   * (Optional) _Import Watched Flags_ after import is complete, or resetup your [http://code.google.com/p/mptvseries/wiki/FAQ#Follw.it follw.it] or [http://code.google.com/p/mptvseries/wiki/FAQ#Trakt.tv trakt.tv] account.
 ----
 
-=Tips and Tricks=
+=Tips And Tricks=
 
  ==Delete From Disk, Database, Disk & Database==
    This lets you delete files or just entries from the database so the can be rescanned
@@ -372,7 +372,7 @@ Its sometimes reported that the database file TVSeriesDatabase4.db3 has become d
    * Recently Added UnWatched 
    {{{episode<;><Episode.FileDateCreated>;>=;<today-7><cond><Episode.Watched>;=;0<;><Episode.FileDateCreated>;desc<;>}}}
 
- ==Speed Up Import Time By Ignoring Old Series==
+ ==Speed Up Import - Ignore Old Series==
    If you have a large collection and notice it takes a while for the import process to run, you could tell MP-TVSeries to ignore some of your collection. You should only do this on old shows that are well and truley finished and are unlikely to be edited/changed at the tvdb.com
    * Load MP-TVSeries plugin Configuration
    * Click on the 'Details' Tab
