--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -368,9 +368,14 @@ Its sometimes reported that the database file TVSeriesDatabase4.db3 has become d
  ==Modify 'Recently Added' 'Latest' Views To Exclude Watched Episodes==
    To change these views so it only shows episodes currently unwatched, you can [http://code.google.com/p/mptvseries/wiki/FAQ#Edit_Database edit] the database, and modify the query to below (Views table)
    * Latest Unwatched  
-   {{{episode<;><Episode.FirstAired>;<=;<today><cond><Episode.FirstAired>;>=;<today-30><cond><Episode.Watched>;=;0<;><Episode.FirstAired>;desc<;>}}}
+{{{
+episode<;><Episode.FirstAired>;<=;<today><cond><Episode.FirstAired>;>=;<today-30><cond><Episode.Watched>;=;0<;><Episode.FirstAired>;desc<;>
+}}}
+
    * Recently Added UnWatched 
-   {{{episode<;><Episode.FileDateCreated>;>=;<today-7><cond><Episode.Watched>;=;0<;><Episode.FileDateCreated>;desc<;>}}}
+{{{
+episode<;><Episode.FileDateCreated>;>=;<today-7><cond><Episode.Watched>;=;0<;><Episode.FileDateCreated>;desc<;>
+}}}
 
  ==Speed Up Import - Ignore Old Series==
    If you have a large collection and notice it takes a while for the import process to run, you could tell MP-TVSeries to ignore some of your collection. You should only do this on old shows that are well and truley finished and are unlikely to be edited/changed at the tvdb.com
