Edited wiki page FAQ through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -321,6 +321,7 @@ Its sometimes reported that the database file TVSeriesDatabase4.db3 has become d
  ==Causes==
  * If you are using Mediaportal/MP-TVSeries in (unsupported and not recommended) [http://wiki.team-mediaportal.com/UserGuides/CentralisedDatabases multi-seat mode], this will likely lead to database corruption if multiple clients write to the database at the same time
  * Hard Shutdown of PC while MP-TVSeries is preforming a database operation, (i.e Power Loss)
+ * PC Crash / Lockup / BSOD
  * Your just unlucky!
 
  ==Solution==
