--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -423,4 +423,34 @@ Its sometimes reported that the database file TVSeriesDatabase4.db3 has become d
    * Choose 'CHANGE LAYOUT'
    * Select 'LIST POSTERS' or 'LIST BANNERS'
 
+ ==Fast Cycling of Artwork via Keyboard or Remote==
+   There is a way to bind a key in Mediaportal for the purpose of having a quick way to change the artwork without having to do into the menu. This need to be linked with the either or both MP actions.
+
+   * ACTION_PREV_PICTURE
+   * ACTION_NEXT_PICTURE
+
+   To map a keyboard button to these actions:
+
+   * Load Mediaportal Configuration
+   * Click General,  Keys and Sounds
+   * Select the 'Window' node
+   * Click 'ADD' button
+   * for Description field type 'MP-TVSeries specific' or similar
+   * Action field, enter in 9811 (the window id of MP-TVSeries)
+   * Click 'ADD'
+
+   This will allow you to map the actions
+
+   * Click  'new action node...'
+   * Enter in description e.g. 'cycle artwork'
+   * from the list of actions, choose ACTION_NEXT_PICTURE or ACTION_PREV_PICTURE.
+   * enter in a KEY that you want to map :)
+   * Then Click OK
+   * Repeat these steps if you want to bind both NEXT AND PREV
+
+   Load Mediaportal, TVSeries plugin, and press the KEY you set to change the artwork
+
+
+
+
 ----
