--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -207,7 +207,7 @@ To download all the available information for your Series, including Episodes yo
  * Click UPDATE
 
  ==Importing Videos Not At TheTVDB==
- MP-TVSeries is not intended for this scenario, but there is a solution you can use. If you have videos that you want to show in MP-TVSeries, and its not appropiate to create it at thetvdb.com, such as personal movies recorded on video cameras stc, you can try the following - Requires MP-TVSeries 3.0.1+
+ MP-TVSeries is not intended for this scenario, but there is a solution you can use. If you have videos that you want to show in MP-TVSeries, and its not appropiate to create it at thetvdb.com, such as personal movies recorded on video cameras stc, you can try the following - Recommend MP-TVSeries 3.0.1+
 
  * Create proper filenames with season and episode syntax e.g.
    * My Trip to Fiji - S01E01.avi
