--- a/trunk/MP-TVSeries/Resources/Languages/cs.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/cs.xml
@@ -54,7 +54,7 @@
 	<string Field="Options" Original="Options">Možnosti</string>
 	<string Field="Genres" Original="Genres">Žánry</string>
 	<string Field="All" Original="All">Vše</string>
-	<string Field="Latest" Original="Latest">Aktuální</string>
+	<string Field="Latest" Original="Latest Aired">Aktuální</string>
 	<string Field="Channels" Original="Channels">Kanály</string>
 	<string Field="Unwatched" Original="Unwatched">Nezhlédnuté</string>
 	<string Field="Favourites" Original="Favourites">Oblíbené</string>
