--- a/trunk/MP-TVSeries/Resources/Languages/de.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/de.xml
@@ -54,7 +54,7 @@
 	<string Field="Options" Original="Options">Optionen</string>
 	<string Field="Genres" Original="Genres">Genre</string>
 	<string Field="All" Original="All">Alle</string>
-	<string Field="Latest" Original="Latest">Neueste</string>
+	<string Field="Latest" Original="Latest Aired">Neueste</string>
 	<string Field="Channels" Original="Channels">Sender</string>
 	<string Field="Unwatched" Original="Unwatched">Ungesehen</string>
 	<string Field="Favourites" Original="Favourites">Favoriten</string>
