--- a/trunk/MP-TVSeries/Resources/Languages/it.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/it.xml
@@ -54,7 +54,7 @@
 	<string Field="Options" Original="Options">Opzioni</string>
 	<string Field="Genres" Original="Genres">Generi</string>
 	<string Field="All" Original="All">Tutti</string>
-	<string Field="Latest" Original="Latest">Recenti</string>
+	<string Field="Latest" Original="Latest Aired">Recenti</string>
 	<string Field="Channels" Original="Channels">Canali</string>
 	<string Field="Unwatched" Original="Unwatched">Non visti</string>
 	<string Field="Favourites" Original="Favourites">Preferiti</string>
