--- a/trunk/MP-TVSeries/Resources/Languages/ko.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/ko.xml
@@ -53,7 +53,7 @@
     <string Field="Options" Original="Options">옵션</string>
     <string Field="Genres" Original="Genres">장르</string>
     <string Field="All" Original="All">전부</string>
-    <string Field="Latest" Original="Latest">최근</string>
+    <string Field="Latest" Original="Latest Aired">최근</string>
     <string Field="Channels" Original="Channels">채널</string>
     <string Field="Unwatched" Original="Unwatched">미시청</string>
     <string Field="Favourites" Original="Favourites">즐겨찾기</string>
