--- a/trunk/MP-TVSeries/Resources/Languages/nl.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/nl.xml
@@ -53,7 +53,7 @@
   <string Field="Options" Original="Options">Opties</string>
   <string Field="Genres" Original="Genres">Genres</string>
   <string Field="All" Original="All">Alle</string>
-  <string Field="Latest" Original="Latest">Laatste</string>
+  <string Field="Latest" Original="Latest Aired">Laatste</string>
   <string Field="Channels" Original="Channels">Kanalen</string>
   <string Field="Unwatched" Original="Unwatched">Onbekeken</string>
   <string Field="Favourites" Original="Favourites">Favorieten</string>
