--- a/trunk/MP-TVSeries/Resources/Languages/pl.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/pl.xml
@@ -52,7 +52,7 @@
 	<string Field="Options" Original="Options">Opcje</string>
 	<string Field="Genres" Original="Genres">Gatunki</string>
 	<string Field="All" Original="All">Wszystkie</string>
-	<string Field="Latest" Original="Latest">Najnowsze</string>
+	<string Field="Latest" Original="Latest Aired">Najnowsze</string>
 	<string Field="Channels" Original="Channels">Kanały</string>
 	<string Field="Unwatched" Original="Unwatched">Nieobejrzane</string>
 	<string Field="Favourites" Original="Favourites">Ulubione</string>
