--- a/trunk/MP-TVSeries/Resources/Languages/pt-BR.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/pt-BR.xml
@@ -54,7 +54,7 @@
 	<string Field="Options" Original="Options">Opções</string>
 	<string Field="Genres" Original="Genres">Gêneros</string>
 	<string Field="All" Original="All">Todos</string>
-	<string Field="Latest" Original="Latest">Recentes</string>
+	<string Field="Latest" Original="Latest Aired">Recentes</string>
 	<string Field="Channels" Original="Channels">Canais</string>
 	<string Field="Unwatched" Original="Unwatched">Não Vistos</string>
 	<string Field="Favourites" Original="Favourites">Favoritos</string>
