--- a/MP-TVSeries/Resources/Languages/da.xml
+++ b/MP-TVSeries/Resources/Languages/da.xml
@@ -54,7 +54,7 @@
 	<string Field="Options" Original="Options">Indstillinger</string>
 	<string Field="Genres" Original="Genres">Genre</string>
 	<string Field="All" Original="All">Alle</string>
-	<string Field="Latest" Original="Latest">Seneste</string>
+	<string Field="Latest" Original="Latest Aired">Seneste</string>
 	<string Field="Channels" Original="Channels">Kanaler</string>
 	<string Field="Unwatched" Original="Unwatched">Uset</string>
 	<string Field="Favourites" Original="Favourites">Favoritter</string>
