--- a/MP-TVSeries/Resources/Languages/el.xml
+++ b/MP-TVSeries/Resources/Languages/el.xml
@@ -52,7 +52,7 @@
   <string Field="Options" Original="Options">Επιλογές</string>
   <string Field="Genres" Original="Genres">Είδη</string>
   <string Field="All" Original="All">Όλα</string>
-  <string Field="Latest" Original="Latest">Τελευταία</string>
+  <string Field="Latest" Original="Latest Aired">Τελευταία</string>
   <string Field="Channels" Original="Channels">Κανάλια</string>
   <string Field="Unwatched" Original="Unwatched">Μη προβληθέντα</string>
   <string Field="Favourites" Original="Favourites">Αγαπημένα</string>
