--- a/MP-TVSeries/Resources/Languages/pt_pt.xml
+++ b/MP-TVSeries/Resources/Languages/pt_pt.xml
@@ -53,7 +53,7 @@
 	<string Field="Options" Original="Options">Opções</string>
 	<string Field="Genres" Original="Genres">Géneros</string>
 	<string Field="All" Original="All">Todos</string>
-	<string Field="Latest" Original="Latest">Recentes</string>
+	<string Field="Latest" Original="Latest Aired">Recentes</string>
 	<string Field="Channels" Original="Channels">Canais</string>
 	<string Field="Unwatched" Original="Unwatched">Não-vistos</string>
 	<string Field="Favourites" Original="Favourites">Favoritos</string>
