--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -294,7 +294,8 @@ The following are the locations of the files and folders used by MP-TVSeries, sh
   * *Vista & Windows 7*  C:\ProgramData\Team MediaPortal\Mediaportal\language\MP-TVSeries\
 
  ==Series Cache (Files)==
- From MP-TVSeries v3.0+, there will be caching to speed up your import time. These cached files are stored in
+ From MP-TVSeries v2.9+, there will be caching of the files downloaded from thetvdb to speed up your import time. Cached series are only removed if the online api reports newer information is available.
+
   * *XP*  C:\Documents and Settings\All Users\Application Data\Team MediaPortal\Mediaportal\MP-TVSeries\Cache
   * *Vista & Windows 7*  C:\ProgramData\Team MediaPortal\Mediaportal\MP-TVSeries\Cache
 
